--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
@@ -58,19 +58,18 @@
                                                     <a href="#" class="nav-link">@item.cName</a>
                                                     <div class="">
                                                         <select class="form-select for-detail-select me-4">
-
-                                                            @foreach (var group in Model.GroupBy(item => item.cName))
-                                                            {
-                                                                if (@group.Select(i => i.c子選項)!=null)
+                                                                
+                                                                @if (item.c子選項!=null)
                                                                 {
-                                                                    <option>@group.Select(i => i.c子選項)</option>
+                                                                    // foreach(var attr in Model.GroupBy(item=>item.product.ProductName).Where().Select())
+                                                                   <option>@item.c子選項</option>
                                                                 }
                                                                 else
                                                                 {
                                                                     <option>商品</option>
                                                                 }
 
-                                                            }
+                                                            
                                                         </select>
                                                     </div>
                                                 </div>
@@ -89,8 +88,8 @@
                                         </div>
                                         <div class="mt-2 ml-5">
                                             <p class=" mb-0">價格</p>
-                                            <span id="subtotal" class="h6">$ @item.c小計 </span> <br />
-                                            <small class="text-muted text-nowrap"> $ @item.cPrice / 份 </small>
+                                            <span class="h6">$ @item.c小計</span><br />
+                                            <small class="text-muted text-nowrap">$ @item.cPrice</small><small>/份</small>
                                         </div>
                                     </div>
                                     <div class="col-lg col-sm-6 d-flex flex-column justify-content-center align-items-sm-center align-items-md-start align-items-lg-center align-items-xl-end mb-2">
