--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
@@ -46,6 +46,7 @@
                 <div class="card border shadow-0">
                     <div class="m-4">
                         @{
+                            if(Model!=null)
                             foreach (var item in Model)
                             {
 
