--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/confirmWin.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/confirmWin.css
@@ -52,3 +52,14 @@
     color: rgba(17, 5, 5, 0.575);
     font-family: ·L³n¥¿¶ÂÅé;
 }
+
+#confirmWin-close {
+    width: 30px;
+    height: 30px;
+    font-family: initial;
+    right: 22px;
+    top: 10px;
+    position: absolute;
+    color: black;
+    cursor: pointer;
+}
