顯示訂單資料

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
@@ -110,7 +110,7 @@
                         <input type="text" class="form-control" id="CreatAddress" name="Address">
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group mb-3">
                         <label>會員狀態：</label>
                         <select class="form-control" id="CreatMemberStatus" name="MemberStatus">
                             <option value="true">開放</option>
