遊戲連動資料庫完成

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -75,7 +75,7 @@
         <!-- Start 獲得物品確認視窗 -->
         <div id="confirmWin">
             <div id="confirmWin-container">
-                <div id="confirmWin-close" >X</div>
+                <div id="confirmWin_close">X</div>
                 <div id="confirmWin-title">
                     N/A
                 </div>
@@ -121,6 +121,7 @@
 
 <button type="submit" id="testlogin">測試登入</button>
 <button type="submit" id="testDBlogin">測試資料庫登入</button>
+<button type="submit" id="testGameDB">測試寫入遊戲資料</button>
 <!-- End 遊戲畫面 -->
 <!-- 遊戲相關js -->
 @section Scripts{
