--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/confirmWin.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/confirmWin.css
@@ -53,7 +53,7 @@
     font-family: ·L³n¥¿¶ÂÅé;
 }
 
-#confirmWin-close {
+#confirmWin_close {
     width: 30px;
     height: 30px;
     font-family: initial;
