修正x按鈕返回大廳

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -75,7 +75,7 @@
         <!-- Start 獲得物品確認視窗 -->
         <div id="confirmWin">
             <div id="confirmWin-container">
-                <div id="confirmWin_close">X</div>
+                <div id="confirmWin-close" >X</div>
                 <div id="confirmWin-title">
                     N/A
                 </div>
