修正確認視窗叉叉

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -75,7 +75,7 @@
         <!-- Start 獲得物品確認視窗 -->
         <div id="confirmWin">
             <div id="confirmWin-container">
-                <div id="confirmWin-close" >X</div>
+                <button id="closeinstruction" class=" btn-secondary" onclick="closeConfirmWin()">x</button>
                 <div id="confirmWin-title">
                     N/A
                 </div>
